--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <div class="grid-item3"></div>
             <div class="grid-item4"></div>
             <div class="grid-item5"></div>
-            <div class="grid-item6"><a href="portfolio con bootstrap.html">Acerca de mí</a></div>
+            <div class="grid-item6"><a href="portfolio.html">Acerca de mí</a></div>
             <div class="grid-item7"></div>
             <div class="grid-item8"><a href="proyectos.html" target="_blank">Proyectos</a></div>
             <div class="grid-item9"></div>
