--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                 <span></span>
             </div>
             <div class="nav_items" id="_items">
-                <a href="portfolio con bootstrap.html">Acerca de mí</a>
+                <a href="portfolio.html">Acerca de mí</a>
                 <a href="proyectos.html">Proyectos</a>
             </div>
         </nav>
