--- a/proyectos.html
+++ b/proyectos.html
@@ -14,41 +14,13 @@
     crossorigin="anonymous">
 </head>
 <body>
-    <div class="container" style="background-color: rgb(172, 63, 63); margin-top: 10px;">
-        <div class="row">
-            <div class="col-0 col-sm-3 col-md-4"></div>
-            <div class="col-5 col-sm-6 col-md-5"><h1 style="color: rgb(244, 246, 248);">Mis proyectos</h1></div>
-            <div class="col-0 col-sm-3 col-md-4"></div>
-        </div>
-    </div>
+    <header style="background-color: rgb(172, 63, 63); margin: 10px;">
+        <h1 style="color: rgb(244, 246, 248); display: grid; text-align: center;">Mis proyectos</h1>
+    </header>
     <br>
-    <main style="margin-left: 20px; margin-right: 20px;">
-        <div class="row" style="background-color: rgb(172, 63, 63);">
-            <div class="col-12"><a href="https://github.com/KevPF98/Natacion">La natación como deporte.</a></div>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </main>
-    </div>
+    <main style="margin-left: 20px; margin-right: 20px; background-color: rgb(172, 63, 63);">
+        <a href="https://github.com/KevPF98/Natacion" style="display: grid; text-align: center;">La natación como deporte.</a>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
     crossorigin="anonymous"></script>
