--- a/proyectos.html
+++ b/proyectos.html
@@ -15,11 +15,13 @@
 </head>
 <body>
     <header style="background-color: rgb(172, 63, 63); margin: 10px;">
-        <h1 style="color: rgb(244, 246, 248); display: grid; text-align: center;">Mis proyectos</h1>
+        <h1 style="color: rgb(244, 246, 248); display: grid; text-align: center; padding: 10px;">Mis proyectos</h1>
     </header>
     <br>
     <main style="margin-left: 20px; margin-right: 20px; background-color: rgb(172, 63, 63);">
-        <a href="https://github.com/KevPF98/Natacion" style="display: grid; text-align: center;">La natación como deporte.</a>
+        <a href="https://github.com/KevPF98/Natacion" style="display: grid; text-align: center; padding: 10px;">
+            La natación como deporte.
+        </a>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
